[gd_scene load_steps=12 format=2]

[ext_resource path="res://farmingTilesheetComplete.png" type="Texture" id=1]
[ext_resource path="res://Scripts/shop_menu.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "berry_seed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "random_seed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 176, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 176, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="shop_menu" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 70.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.0196078 )

[node name="icon" type="AnimatedSprite" parent="."]
position = Vector2( 14, 10 )
frames = SubResource( 3 )
animation = "berry_seed"

[node name="button_left" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 14.0
margin_top = 17.0
margin_right = 26.0
margin_bottom = 37.0
rect_rotation = 90.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )

[node name="left_button" type="AnimatedSprite" parent="."]
position = Vector2( 6, 22 )
rotation = 1.5708
scale = Vector2( 1.3, 1.8 )
frames = SubResource( 5 )

[node name="button_right" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 35.0
margin_top = 17.0
margin_right = 47.0
margin_bottom = 37.0
rect_rotation = 90.61

[node name="right_button" type="AnimatedSprite" parent="."]
position = Vector2( 20, 21 )
rotation = -1.5708
scale = Vector2( 1.3, 1.8 )
frames = SubResource( 7 )

[node name="price_label" type="RichTextLabel" parent="."]
margin_left = 25.0
margin_top = 2.0
margin_right = 65.0
margin_bottom = 42.0
text = "100
"

[node name="coin_icon" type="AnimatedSprite" parent="."]
position = Vector2( 59, 9 )
frames = SubResource( 9 )

[node name="buy_button_color" type="ColorRect" parent="."]
margin_left = 38.0
margin_top = 18.0
margin_right = 66.0
margin_bottom = 32.0
color = Color( 0.729412, 0.129412, 0.129412, 0.34902 )
__meta__ = {
"_editor_description_": "
"
}

[node name="buy_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 62.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 39.0
rect_rotation = 90.0

[connection signal="pressed" from="button_left" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="button_right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="buy_button" to="." method="_on_buy_button_pressed"]
